First prototype with python integration

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,7 +49,12 @@ package_dir =
 # For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    numpy
 
+setup_requires =
+    setuptools_scm[toml]>=3.4
+    setuptools_scm_git_archive>=1.0
+    numpy
 
 [options.packages.find]
 where = src
@@ -84,9 +89,9 @@ testing =
 # in order to write a coverage file that can be read by Jenkins.
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
-addopts =
-    --cov spar_vec_sucher --cov-report term-missing
-    --verbose
+# addopts =
+#     --cov spar_vec_sucher --cov-report term-missing
+#     --verbose
 norecursedirs =
     dist
     build
@@ -121,3 +126,9 @@ exclude =
 # This will be used when updating. Do not change!
 version = 4.4.1
 package = spar_vec_sucher
+
+# Uncomment the following section to include additional files in your package
+[options.package_data]
+# spar_vec_sucher =
+#    example_file1.txt
+#    example_file2.yaml
